# ig-ontology-builder

./: .gitignore  LICENSE  README.md  ig.owl  ig.py  main.py  pyproject.toml  rules.py
