[tool.poetry]
name = "regulations-ontology"
version = "0.1.0"
description = ""
authors = ["Stanislaw Gizinski <s.gizinski84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xlrd = "^2.0.1"
pandas = "^1.2.3"
openpyxl = "^3.0.7"
jupyter = "^1.0.0"
Owlready2 = "^0.29"
lemminflect = "^0.2.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
